force-app/main/default/objects/Feature__c/Feature__c.object-meta.xml
<CustomObject>
    <label>Feature</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Feature Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>