force-app/main/default/objects/Feature__c/fields/Account_Key__c.field-meta.xml
<CustomField>
    <fullName>Account_Key__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Unique identifier for the feature</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Account Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>