force-app/main/default/objects/Feature__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Feature account number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>