force-app/main/default/objects/Feature__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Features closed date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>