force-app/main/default/objects/Feature__c/fields/Force_Update__c.field-meta.xml
<CustomField>
    <fullName>Force_Update__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>A flag to allow the OCV integration to bypass versioning validations to restore the data to a correct OCV state</description>
    <label>Force Update</label>
    <type>Checkbox</type>
</CustomField>