force-app/main/default/objects/Feature__c/fields/Marketing_Code__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Product code for feature</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Marketing Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>