force-app/main/default/objects/Feature__c/fields/OCV_Feature_Version__c.field-meta.xml
<CustomField>
    <fullName>OCV_Feature_Version__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Feature Version maintained by  OCV</description>
    <label>OCV Feature Version</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>