force-app/main/default/objects/Feature__c/fields/Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Features open date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Open Date</label>
    <type>Date</type>
</CustomField>