force-app/main/default/objects/Feature__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Type of the feature</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>