force-app/main/default/objects/Feature__c/validationRules/HIGH_FEATURE_VERSION.validationRule-meta.xml
<ValidationRule>
    <fullName>HIGH_FEATURE_VERSION</fullName>
    <active>true</active>
    <description>Validates that the feature version being received is sequential to the current version</description>
    <errorConditionFormula>AND(
 $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
ISCHANGED( OCV_Feature_Version__c),
Force_Update__c = false,
OR(
ISNULL(PRIORVALUE(OCV_Feature_Version__c)),
OCV_Feature_Version__c - PRIORVALUE(OCV_Feature_Version__c) &gt; 1
)
)</errorConditionFormula>
    <errorMessage>HIGH VERSION</errorMessage>
</ValidationRule>