force-app/main/default/objects/Feature__c/validationRules/LOW_FEATURE_VERSION.validationRule-meta.xml
<ValidationRule>
    <fullName>LOW_FEATURE_VERSION</fullName>
    <active>true</active>
    <description>Validates that the feature version being received is not lower than what is currently available</description>
    <errorConditionFormula>AND(
 $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
NOT(ISNULL(PRIORVALUE( OCV_Feature_Version__c))),
OR(
ISNULL(OCV_Feature_Version__c),
OCV_Feature_Version__c &lt; PRIORVALUE(OCV_Feature_Version__c)
)
)</errorConditionFormula>
    <errorMessage>LOW VERSION</errorMessage>
</ValidationRule>